--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
 								</td>
 							</tr>
 							<tr>
+								<td/>
+								<td/>
+							</tr>
+							<tr>
+								<td>
+									<label for="models">attacks: </label>
+								</td>
+								<td>
+									<input type="tableInput" id="weaponName" size="3" value="2" />
+								</td>
+							</tr>
+							<tr>
 								<td>
 									<label for="models">to hit: </label>
 								</td>
@@ -132,7 +144,6 @@
 		</table>
     </div>
         
-    </br>
     <button onclick="addWeapon()">Add Profile</button>
     <button onclick="removeWeapon()">Remove Profile</button>
     </br>
