--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body bgcolor='#35342F' text='#FEF7DB'>
     <!--name-->
     <div><font size="6">Age of Sigmulator</font></div>
-    <div><font size="2"><i>New and (?)improved! If you have any questions hit me up on twitter @jpganis or find me on Whatsapp!</i></font></div>
+    <div><font size="2"><i>New and (?)improved! If you have find any bugs or have any questions hit me up on twitter @jpganis or find me on WhatsApp!</i></font></div>
     <br />
 	
 	<!------------->
