fixed wound reroll bug

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
 					hitRerolls[j].value = unitHitRerolls.value;
 				}
 				
-				if (woundRerolls[j].value = "none")
+				if (woundRerolls[j].value == "none")
 				{
 					woundRerolls[j].value = unitWoundRerolls.value;
 				}
